MINOR: skip 'zinc' phase from gradle dependency-check plugin (#15054)
This avoids `gradle dependencyCheckAggregate` from reporting on
advisories in build-time dependencies (e.g. CVE-2023-46122) which
typically should not affect us.

I checked that this does not prevent advisories in 'regular'
dependencies from being reported (but there currently are none).

Reviewers: Josep Prat <josep.prat@aiven.io>

--- a/build.gradle
+++ b/build.gradle
@@ -784,6 +784,7 @@ subprojects {
   dependencyCheck {
     suppressionFile = "$rootDir/gradle/resources/dependencycheck-suppressions.xml"
     skipProjects = [ ":jmh-benchmarks", ":trogdor" ]
+    skipConfigurations = [ "zinc" ]
   }
 }
 
